# ionia-img

./: Cargo.toml  Dockerfile
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
ionia-frontend/: index.html  package.json
src/: lib.rs  main.rs
