[package]
name = "lilith-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1.28.2", features = ["full"] }
mongodb = "2.5.0"
mongodb-gridfs = "0.2.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
futures-util = "0.3.27"
mime_guess = "2.0.4"
rand = "0.8.5"
bytes = "1.4.0"
ctrlc = "3.4.0"

# Optimizations (making the binary as small as possible)
[profile.release]
lto = true
opt-level = "z"
trim = true
# also remove debug symbols
debug = false